--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /AD01/PruebaFicheros/nbproject/private/
 /AD01/AD01FicherosCaracteres/nbproject/private/
 /AD01/AD01FicherosCaracteres/build/
+/AD01/AD01Actividad3/nbproject/private/
+/AD01/AD01Actividad3/build/
+/AD01/AD01Actividad3/dist/
