--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /AD01/AD01Actividad3/nbproject/private/
 /AD01/AD01Actividad3/build/
 /AD01/AD01Actividad3/dist/
+/AD01/AD01Actividad5/nbproject/private/
