--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 /AD01/AD01Actividad3/build/
 /AD01/AD01Actividad3/dist/
 /AD01/AD01Actividad5/nbproject/private/
+/AD01/AD01Actividad5/build/
+/AD01/AD01Actividad5/dist/
+/AD01/Tarea01.1-EnunciadoDist/dist/
+/AD01/DI_T1-master/SalonHabana/build/
+/AD01/DI_T1-master/SalonHabana/nbproject/private/
