--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@
 /AD01/Tarea01.1-EnunciadoDist/dist/
 /AD01/DI_T1-master/SalonHabana/build/
 /AD01/DI_T1-master/SalonHabana/nbproject/private/
+/AD01/Actividad1/nbproject/private/
+/AD01/Actividad2/nbproject/private/
+/AD01/Actividad3/nbproject/private/
+/AD01/Actividad5/nbproject/private/
+/AD01/Actividad2/build/
+/AD01/Actividad2/dist/
