--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 /AD01/Actividad5/nbproject/private/
 /AD01/Actividad2/build/
 /AD01/Actividad2/dist/
+/AD01/PSP01_Tarea/nbproject/private/
+/AD01/Tarea_Actividad1/nbproject/private/
+/AD01/Tarea_Actividad2/nbproject/private/
+/AD01/Tarea01-2-Enunciado/nbproject/private/
