--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /AD01/Tarea_Actividad1/nbproject/private/
 /AD01/Tarea_Actividad2/nbproject/private/
 /AD01/Tarea01-2-Enunciado/nbproject/private/
+/AD01/Tarea01.2/nbproject/private/
