--- a/AD01/Tarea01.1/nbproject/project.properties
+++ b/AD01/Tarea01.1/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Dist-Tarea01.1-Enunciado.jar
+dist.jar=${dist.dir}/Tarea01.1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Dist-Tarea01.1-Enunciado
+dist.jlink.output=${dist.jlink.dir}/Tarea01.1
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Dist-Tarea01.1-Enunciado
+jlink.launcher.name=Tarea01.1
 main.class=ad.teis.Tarea01_1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
