--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /AD01/Tarea_Actividad2/nbproject/private/
 /AD01/Tarea01-2-Enunciado/nbproject/private/
 /AD01/Tarea01.2/nbproject/private/
+/AD01/Ejemplo_DOM/nbproject/private/
