--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /AD01/Tarea01-2-Enunciado/nbproject/private/
 /AD01/Tarea01.2/nbproject/private/
 /AD01/Ejemplo_DOM/nbproject/private/
+/AD01/Tarea01.2/build/
+/AD01/Tarea01.2/dist/
