--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@
 /AD01/Ejemplo_DOM/nbproject/private/
 /AD01/Tarea01.2/build/
 /AD01/Tarea01.2/dist/
+/AD01/Actividad3/build/
+/AD01/EjemploJAXB-master/nbproject/private/
+/AD01/EjemploJAXB-master/build/
+/AD01/EjemploJAXB-master/dist/
