Eval_UD1_Dist + Eval_UD2_Dist

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@
 /AD02/Tarea02.1-Enunciado/nbproject/private/
 /AD02/Tarea02.1-Enunciado/build/
 /AD02/Tarea02.1/nbproject/private/
+/AD01/Eval_UD1_Dist_Enunciado/nbproject/private/
+/AD01/Eval_UD1_Dist/nbproject/private/
